[package]
name = "same-file"
version = "1.0.6"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A simple crate for determining whether two file paths point to the same file.
"""
documentation = "https://docs.rs/same-file"
homepage = "https://github.com/BurntSushi/same-file"
repository = "https://github.com/BurntSushi/same-file"
readme = "README.md"
keywords = ["same", "file", "equal", "inode"]
license = "Unlicense/MIT"
exclude = ["/.github"]
edition = "2018"

[dev-dependencies]
doc-comment = "0.3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
